# IntentRecognizer

./: CMakeLists.txt  TextAnalyser.cpp  TextAnalyser.h  hello_test.cpp  main.cpp
Google_tests/: CMakeLists.txt
data/: time_keywords.txt  topics_keywords.txt
data/opendatasoft/: Dataset source.txt  names_coordinates.csv
data/stopwords/: source.txt
src/: IntentRecognizer.cpp  IntentRecognizer.h  StringHelper.cpp  StringHelper.h  TextAnalyser.cpp  TextAnalyser.h  main.cpp
